<resources>
    <string name="app_name">GithupUser</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_repositories">Repositories</string>
    <string name="text_follower">Follower</string>
    <string name="follower_fragment">Follower Fragment</string>
    <string name="following_fragment">Following Fragment</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">following</string>
    <string name="user">User</string>
    <string name="not_found">Not Found</string>
    <string name="title_home">GithupUser</string>
    <string name="favorite">Favorite</string>
    <string name="profile_desc_button_back">Profile_back</string>
    <string name="setting_setting">Setting</string>
    <string name="setting_daily_reminder">Daily Reminder</string>
    <string name="drak_mode">Drak Mode</string>

    <style name="TagDetailNum" parent="@android:style/TextAppearance.Medium">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:ellipsize">end</item>
        <item name="android:textStyle">bold</item>
        <item name="android:maxLines">1</item>
        <item name="android:textSize">18sp</item>
    </style>

    <style name="TagDetail" parent="@android:style/TextAppearance.Medium">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:ellipsize">end</item>
        <item name="android:maxLines">1</item>
        <item name="android:textSize">12sp</item>
    </style>

    <style name="WH_wrap_content" parent="@android:style/TextAppearance.Medium">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
    </style>

    <style name="WH_match_parent" parent="@android:style/TextAppearance.Medium">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">match_parent</item>
    </style>

</resources>